Content Added FIXES IN DESCRIPTION ^-^
NEED TO FIX:
-Page loading halfway down
-Make Contact form functional

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -57,9 +57,9 @@ body {
 }*/
 
 .myTitle {
-	padding-left:1em;
+	padding-left:.5em;
 	padding-top:4px;
-	padding-right:2em;
+	padding-right:1em;
 }
 
 .logo {
@@ -118,7 +118,7 @@ body {
     font-weight:200;
     }
     .headh2{
-    font-size:1.4em;
+    font-size:1.2em;
     font-family: "OpenSans";
     text-align:left;
     min-width:300px;
@@ -233,7 +233,7 @@ body {
 	display:inline-block;
 	position:relative;
 	width:13.8em;
-	min-height:150px;
+	min-height:200px;
 	margin-top:.769em;
 	margin-right:2.01em;
     border-top:1px solid rgb(168,168,168);
@@ -262,7 +262,7 @@ body {
 
 h3 {
 	display:block;
-	min-height:3em;
+	min-height:3.5em;
 	font-size:1.05em;
 	margin:0;
 	font-weight:400;
@@ -435,7 +435,7 @@ textarea:focus {
     .headh1 {
     text-align:left;
     min-width:300px;
-    max-width:301px;
+    max-width:400px;
     margin-left:calc(50% - 8em);
     margin-right:0px;
     padding-right:0;
@@ -464,7 +464,7 @@ textarea:focus {
 	.headh1 {
 	text-align:left;
 	min-width:300px;
-	max-width:301px;
+	max-width:350px;
     margin-left:calc(50% - 8em);
     margin-right:0px;
     padding-right:0;
@@ -474,7 +474,7 @@ textarea:focus {
     text-align:left;
     min-width:300px;
     max-width:301px;
-    margin-left:calc(50% - 10.85em);
+    margin-left:calc(50% - 12.45em);
     margin-right:0px;
     padding-right:0;
     padding-left:0;
@@ -542,7 +542,7 @@ textarea:focus {
     }
     
     .headh2 {
-    margin-left:calc(50% - 16.15em);
+    margin-left:calc(50% - 15.42em);
     }
 	
 	.two {
@@ -626,7 +626,7 @@ textarea:focus {
     }
     
     .headh2 {
-    margin-left:calc(50% - 22.1em);
+    margin-left:calc(50% - 22.35em);
     }
 	
 	.floatInfo {
@@ -655,7 +655,7 @@ textarea:focus {
 	.floatTitle {
 	float:left;
 	margin-left:0px;
-	margin-bottom:22em;
+	margin-bottom:26em;
 	}
 	
 	.button1 {
