--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1214,9 +1214,9 @@ body {
 }*/
 /* line 59, ../sass/main.scss */
 .myTitle {
-  padding-left: 1em;
+  padding-left: .5em;
   padding-top: 4px;
-  padding-right: 2em;
+  padding-right: 1em;
 }
 
 /* line 65, ../sass/main.scss */
@@ -1281,7 +1281,7 @@ body {
 
 /* line 120, ../sass/main.scss */
 .headh2 {
-  font-size: 1.4em;
+  font-size: 1.2em;
   font-family: "OpenSans";
   text-align: left;
   min-width: 300px;
@@ -1399,7 +1399,7 @@ body {
   display: inline-block;
   position: relative;
   width: 13.8em;
-  min-height: 150px;
+  min-height: 200px;
   margin-top: .769em;
   margin-right: 2.01em;
   border-top: 1px solid #a8a8a8;
@@ -1431,7 +1431,7 @@ body {
 /* line 263, ../sass/main.scss */
 h3 {
   display: block;
-  min-height: 3em;
+  min-height: 3.5em;
   font-size: 1.05em;
   margin: 0;
   font-weight: 400;
@@ -1622,7 +1622,7 @@ textarea:focus {
   .headh1 {
     text-align: left;
     min-width: 300px;
-    max-width: 301px;
+    max-width: 400px;
     margin-left: calc(50% - 8em);
     margin-right: 0px;
     padding-right: 0;
@@ -1655,7 +1655,7 @@ textarea:focus {
   .headh1 {
     text-align: left;
     min-width: 300px;
-    max-width: 301px;
+    max-width: 350px;
     margin-left: calc(50% - 8em);
     margin-right: 0px;
     padding-right: 0;
@@ -1667,7 +1667,7 @@ textarea:focus {
     text-align: left;
     min-width: 300px;
     max-width: 301px;
-    margin-left: calc(50% - 10.85em);
+    margin-left: calc(50% - 12.45em);
     margin-right: 0px;
     padding-right: 0;
     padding-left: 0;
@@ -1740,7 +1740,7 @@ textarea:focus {
 
   /* line 544, ../sass/main.scss */
   .headh2 {
-    margin-left: calc(50% - 16.15em);
+    margin-left: calc(50% - 15.42em);
   }
 
   /* line 551, ../sass/main.scss */
@@ -1822,7 +1822,7 @@ textarea:focus {
 
   /* line 628, ../sass/main.scss */
   .headh2 {
-    margin-left: calc(50% - 22.1em);
+    margin-left: calc(50% - 22.35em);
   }
 
   /* line 632, ../sass/main.scss */
@@ -1854,7 +1854,7 @@ textarea:focus {
   .floatTitle {
     float: left;
     margin-left: 0px;
-    margin-bottom: 22em;
+    margin-bottom: 26em;
   }
 
   /* line 661, ../sass/main.scss */
