--- a/sass/main.scss
+++ b/sass/main.scss
@@ -394,6 +394,7 @@ textarea:focus {
 	font-family:"OpenSans";
 	margin-left:calc(50% - 127px);
 	line-height:2em;
+	margin-top:1em;
 	margin-bottom:2em;
 	text-decoration:none;
 }
