--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1183,7 +1183,7 @@ ul.off-canvas-list li a:hover {
   src: url(../fonts/Web_Serveroff.otf);
 }
 
-/* line 30, ../sass/main.scss */
+/* line 32, ../sass/main.scss */
 body {
   padding: 0;
   margin: 0;
@@ -1212,25 +1212,25 @@ body {
     margin-right: 1px;
   }
 }*/
-/* line 59, ../sass/main.scss */
+/* line 61, ../sass/main.scss */
 .myTitle {
   padding-left: .5em;
   padding-top: 4px;
   padding-right: 1em;
 }
 
-/* line 65, ../sass/main.scss */
+/* line 67, ../sass/main.scss */
 .logo {
   max-height: 2.9em;
 }
 
-/* line 69, ../sass/main.scss */
+/* line 71, ../sass/main.scss */
 .stripe {
   position: relative;
   padding: 3em .769em;
 }
 
-/* line 74, ../sass/main.scss */
+/* line 76, ../sass/main.scss */
 .one {
   background: url("../img/scientist.jpg");
   background-position: 85% 0px;
@@ -1239,33 +1239,33 @@ body {
   background-repeat: no-repeat;
 }
 
-/* line 82, ../sass/main.scss */
+/* line 84, ../sass/main.scss */
 .two {
   min-height: 450px;
   padding-bottom: 1em;
 }
 
-/* line 87, ../sass/main.scss */
+/* line 89, ../sass/main.scss */
 .three {
   text-align: center;
   padding-top: 1.5em;
   padding-bottom: 1.5em;
 }
 
-/* line 96, ../sass/main.scss */
+/* line 98, ../sass/main.scss */
 .headtext {
   text-align: right;
   margin-right: 32.24px;
   margin-top: -2em;
 }
 
-/* line 102, ../sass/main.scss */
+/* line 104, ../sass/main.scss */
 .test {
   display: block;
   text-align: right;
 }
 
-/* line 108, ../sass/main.scss */
+/* line 110, ../sass/main.scss */
 .headh1 {
   font-size: 1.9em;
   font-family: "OpenSans";
@@ -1279,7 +1279,7 @@ body {
   font-weight: 200;
 }
 
-/* line 120, ../sass/main.scss */
+/* line 122, ../sass/main.scss */
 .headh2 {
   font-size: 1.2em;
   font-family: "OpenSans";
@@ -1293,14 +1293,14 @@ body {
   font-weight: 200;
 }
 
-/* line 133, ../sass/main.scss */
+/* line 135, ../sass/main.scss */
 .mainh2 {
   font-size: 1.4em;
   display: block;
   orphans: 3;
 }
 
-/* line 142, ../sass/main.scss */
+/* line 144, ../sass/main.scss */
 .circleImg {
   display: none;
   position: absolute;
@@ -1311,12 +1311,12 @@ body {
   background-color: #000;
 }
 
-/* line 152, ../sass/main.scss */
+/* line 154, ../sass/main.scss */
 .list {
   margin-left: 0;
 }
 
-/* line 156, ../sass/main.scss */
+/* line 158, ../sass/main.scss */
 .list li {
   display: list-item;
   padding: 0;
@@ -1328,7 +1328,7 @@ body {
   padding-left: 2.5em;
 }
 
-/* line 168, ../sass/main.scss */
+/* line 170, ../sass/main.scss */
 .list li:before {
   content: "\003E \020";
   font-family: "consolas";
@@ -1341,7 +1341,7 @@ body {
   margin-bottom: .5em;
 }
 
-/* line 180, ../sass/main.scss */
+/* line 182, ../sass/main.scss */
 .list {
   border-top: #008cba solid 1px;
   display: inline-block;
@@ -1357,20 +1357,20 @@ body {
   overflow: visible;
 }
 
-/* line 195, ../sass/main.scss */
+/* line 197, ../sass/main.scss */
 .listHidden {
   display: none;
   margin-right: 0;
 }
 
-/* line 200, ../sass/main.scss */
+/* line 202, ../sass/main.scss */
 .tileContainer {
   display: block;
   margin: 0 auto;
   text-align: center;
 }
 
-/* line 206, ../sass/main.scss */
+/* line 208, ../sass/main.scss */
 .floatTitle {
   display: block;
   width: 13.8em;
@@ -1380,7 +1380,7 @@ body {
   margin-right: .769em;
 }
 
-/* line 218, ../sass/main.scss */
+/* line 220, ../sass/main.scss */
 .threeh2 {
   font-family: "OpenSans";
   font-weight: 200;
@@ -1394,7 +1394,7 @@ body {
   margin-bottom: 0em;
 }
 
-/* line 232, ../sass/main.scss */
+/* line 234, ../sass/main.scss */
 .tile {
   display: inline-block;
   position: relative;
@@ -1407,7 +1407,7 @@ body {
   overflow: auto;
 }
 
-/* line 244, ../sass/main.scss */
+/* line 246, ../sass/main.scss */
 .listContainer {
   padding: 0;
   max-width: 759.48px;
@@ -1418,17 +1418,17 @@ body {
   min-height: 265px;
 }
 
-/* line 254, ../sass/main.scss */
+/* line 256, ../sass/main.scss */
 .tileInvis1 {
   display: none;
 }
 
-/* line 258, ../sass/main.scss */
+/* line 260, ../sass/main.scss */
 .tileInvis {
   display: none;
 }
 
-/* line 263, ../sass/main.scss */
+/* line 265, ../sass/main.scss */
 h3 {
   display: block;
   min-height: 3.5em;
@@ -1439,7 +1439,7 @@ h3 {
   text-align: left;
 }
 
-/* line 275, ../sass/main.scss */
+/* line 277, ../sass/main.scss */
 p {
   text-align: left;
   font-family: "OpenSans";
@@ -1450,12 +1450,12 @@ p {
   margin: .5em 0;
 }
 
-/* line 285, ../sass/main.scss */
+/* line 287, ../sass/main.scss */
 .tileText {
   text-align: left;
 }
 
-/* line 289, ../sass/main.scss */
+/* line 291, ../sass/main.scss */
 .floatInfo {
   display: none;
   float: right;
@@ -1467,36 +1467,36 @@ p {
   text-align: left;
 }
 
-/* line 300, ../sass/main.scss */
+/* line 302, ../sass/main.scss */
 .infoText {
   font-family: "OpenSans";
   font-size: 1.05em;
   line-height: 1.4em;
 }
 
-/* line 306, ../sass/main.scss */
+/* line 308, ../sass/main.scss */
 .mailLink {
   color: #008cba;
   text-decoration: underline;
 }
 
-/* line 311, ../sass/main.scss */
+/* line 313, ../sass/main.scss */
 .contactTitle {
   border-bottom: 1px solid #a8a8a8;
   padding-bottom: 31px;
 }
 
-/* line 316, ../sass/main.scss */
+/* line 318, ../sass/main.scss */
 .contactInfoTitle {
   color: #008cba;
 }
 
-/* line 320, ../sass/main.scss */
+/* line 322, ../sass/main.scss */
 #contactForm {
   margin-bottom: 16px;
 }
 
-/* line 324, ../sass/main.scss */
+/* line 326, ../sass/main.scss */
 .contactQuarter {
   display: inline-block;
   margin: 0;
@@ -1504,7 +1504,7 @@ p {
   margin-top: 12.32px;
 }
 
-/* line 331, ../sass/main.scss */
+/* line 333, ../sass/main.scss */
 .contactHalf {
   display: inline-block;
   margin: 0;
@@ -1512,14 +1512,14 @@ p {
   margin-top: 12.32px;
 }
 
-/* line 338, ../sass/main.scss */
+/* line 340, ../sass/main.scss */
 input {
   font-family: "OpenSans";
   border: #a8a8a8 1px solid;
   padding-left: .5em;
 }
 
-/* line 344, ../sass/main.scss */
+/* line 346, ../sass/main.scss */
 h4 {
   display: block;
   font-size: 1.05em;
@@ -1532,7 +1532,7 @@ h4 {
   text-align: left;
 }
 
-/* line 356, ../sass/main.scss */
+/* line 358, ../sass/main.scss */
 textarea {
   margin: 0;
   font-family: "OpenSans";
@@ -1540,35 +1540,35 @@ textarea {
   padding-left: .5em;
 }
 
-/* line 363, ../sass/main.scss */
+/* line 365, ../sass/main.scss */
 input:focus {
   border: 1px solid #008cba;
 }
 
-/* line 367, ../sass/main.scss */
+/* line 369, ../sass/main.scss */
 textarea:focus {
   border: 1px solid #008cba;
 }
 
-/* line 371, ../sass/main.scss */
+/* line 373, ../sass/main.scss */
 .contactAreaQuarter {
   box-sizing: border-box;
   width: 219px;
   height: 32.24px;
 }
 
-/* line 378, ../sass/main.scss */
+/* line 380, ../sass/main.scss */
 #message {
   width: 221px;
   min-height: 3.5em;
 }
 
-/* line 384, ../sass/main.scss */
+/* line 386, ../sass/main.scss */
 .displayToggle {
   display: none;
 }
 
-/* line 388, ../sass/main.scss */
+/* line 390, ../sass/main.scss */
 .button1 {
   float: left;
   color: #464646;
@@ -1583,43 +1583,56 @@ textarea:focus {
   text-decoration: none;
 }
 
-/* line 402, ../sass/main.scss */
+/* line 404, ../sass/main.scss */
 .button1:hover {
   border: 1px solid #008cba;
   color: #008cba;
 }
 
-/* line 407, ../sass/main.scss */
+/* line 409, ../sass/main.scss */
 .firstTile {
   border-color: #008cba;
 }
 
-/* line 411, ../sass/main.scss */
+/* line 413, ../sass/main.scss */
 .firstList {
   border-color: #008cba;
+}
+
+/* line 417, ../sass/main.scss */
+img.form-success {
+  max-height: 1.5rem;
+  float: left;
+}
+
+/* line 421, ../sass/main.scss */
+div.form-success {
+  text-align: left;
+  line-height: 1rem;
+  margin: 1rem;
 }
 
 /*--------------------------------
 --------------------------------*/
 @media (min-width: 0px) and (max-width: 534px) {
-  /* line 418, ../sass/main.scss */
+  /* line 430, ../sass/main.scss */
   .test {
     margin-top: -5em;
   }
 
-  /* line 422, ../sass/main.scss */
+  /* line 434, ../sass/main.scss */
   .headtext {
     display: none;
   }
 }
 @media (min-width: 535px) {
-  /* line 431, ../sass/main.scss */
+  /* line 443, ../sass/main.scss */
   .one {
     min-height: 300px;
     background-position: 60% 0;
   }
 
-  /* line 436, ../sass/main.scss */
+  /* line 448, ../sass/main.scss */
   .headh1 {
     text-align: left;
     min-width: 300px;
@@ -1630,7 +1643,7 @@ textarea:focus {
     padding-left: 0;
   }
 
-  /* line 445, ../sass/main.scss */
+  /* line 457, ../sass/main.scss */
   .headh2 {
     text-align: left;
     min-width: 300px;
@@ -1642,17 +1655,17 @@ textarea:focus {
   }
 }
 @media (min-width: 535px) {
-  /* line 457, ../sass/main.scss */
+  /* line 469, ../sass/main.scss */
   .secondTile {
     border-color: #008cba;
   }
 
-  /* line 461, ../sass/main.scss */
+  /* line 473, ../sass/main.scss */
   .one {
     min-height: 300px;
   }
 
-  /* line 465, ../sass/main.scss */
+  /* line 477, ../sass/main.scss */
   .headh1 {
     text-align: left;
     min-width: 300px;
@@ -1663,7 +1676,7 @@ textarea:focus {
     padding-left: 0;
   }
 
-  /* line 474, ../sass/main.scss */
+  /* line 486, ../sass/main.scss */
   .headh2 {
     text-align: left;
     min-width: 300px;
@@ -1674,207 +1687,207 @@ textarea:focus {
     padding-left: 0;
   }
 
-  /* line 483, ../sass/main.scss */
+  /* line 495, ../sass/main.scss */
   .two {
     min-height: 0px;
   }
 
-  /* line 487, ../sass/main.scss */
+  /* line 499, ../sass/main.scss */
   .list .liToggle {
     display: none;
   }
 
-  /* line 495, ../sass/main.scss */
+  /* line 507, ../sass/main.scss */
   .listHidden {
     display: inline-block;
   }
 
-  /* line 499, ../sass/main.scss */
+  /* line 511, ../sass/main.scss */
   .listContainer {
     min-width: 480px;
   }
 
-  /* line 503, ../sass/main.scss */
+  /* line 515, ../sass/main.scss */
   .floatTitle {
     margin-left: calc(50% - 15.85em);
   }
 
-  /* line 507, ../sass/main.scss */
+  /* line 519, ../sass/main.scss */
   .button1 {
     margin-left: calc(50% - 15.85em);
   }
 
-  /* line 511, ../sass/main.scss */
+  /* line 523, ../sass/main.scss */
   .tileInvis1 {
     display: inline-block;
   }
 
-  /* line 515, ../sass/main.scss */
+  /* line 527, ../sass/main.scss */
   #message {
     width: 474.24;
     min-height: 5.15em;
   }
 }
 @media (min-width: 784px) {
-  /* line 522, ../sass/main.scss */
+  /* line 534, ../sass/main.scss */
   .thirdTile {
     border-color: #008cba;
   }
 
-  /* line 529, ../sass/main.scss */
+  /* line 541, ../sass/main.scss */
   .firstList {
     border-color: #a8a8a8;
   }
 
-  /* line 533, ../sass/main.scss */
+  /* line 545, ../sass/main.scss */
   .one {
     min-height: 450px;
     background-size: cover;
     background-repeat: no-repeat;
   }
 
-  /* line 539, ../sass/main.scss */
+  /* line 551, ../sass/main.scss */
   .headh1, .headh2 {
     margin-left: calc(50% - 11.9em);
     max-width: 850px;
   }
 
-  /* line 545, ../sass/main.scss */
+  /* line 557, ../sass/main.scss */
   .headh2 {
     margin-left: calc(50% - 15.42em);
   }
 
-  /* line 552, ../sass/main.scss */
+  /* line 564, ../sass/main.scss */
   .threeh2list {
     text-align: left;
     border-top: 1px solid #008cba;
   }
 
-  /* line 557, ../sass/main.scss */
+  /* line 569, ../sass/main.scss */
   .listTitle {
     float: left;
     margin-left: 0px;
     margin-bottom: 100px;
   }
 
-  /* line 565, ../sass/main.scss */
+  /* line 577, ../sass/main.scss */
   .listContainer {
     min-width: 727.32px;
     min-height: 265px;
     padding: 0;
   }
 
-  /* line 571, ../sass/main.scss */
+  /* line 583, ../sass/main.scss */
   ul .displayToggle {
     display: list-item;
   }
 
-  /* line 584, ../sass/main.scss */
+  /* line 596, ../sass/main.scss */
   .tile {
     margin-right: 2.01em;
     display: inline-block;
   }
 
-  /* line 589, ../sass/main.scss */
+  /* line 601, ../sass/main.scss */
   .tileInvis {
     display: inline-block;
   }
 
-  /* line 593, ../sass/main.scss */
+  /* line 605, ../sass/main.scss */
   .floatTitle {
     margin-left: calc(50% - 23.74em);
   }
 
-  /* line 597, ../sass/main.scss */
+  /* line 609, ../sass/main.scss */
   .button1 {
     margin-left: calc(50% - 23.74em);
   }
 
-  /* line 601, ../sass/main.scss */
+  /* line 613, ../sass/main.scss */
   .floatInfo {
     display: inline-block;
   }
 
-  /* line 605, ../sass/main.scss */
+  /* line 617, ../sass/main.scss */
   .info {
     display: none;
   }
 
-  /* line 609, ../sass/main.scss */
+  /* line 621, ../sass/main.scss */
   .tileContainer {
     max-width: 763px;
   }
 
-  /* line 613, ../sass/main.scss */
+  /* line 625, ../sass/main.scss */
   .listTileContainer {
     max-width: 250px;
   }
 }
 @media (min-width: 1054px) {
-  /* line 620, ../sass/main.scss */
+  /* line 632, ../sass/main.scss */
   .one {
     background-position: 50% 0;
   }
 
-  /* line 624, ../sass/main.scss */
+  /* line 636, ../sass/main.scss */
   .headh1, .headh2 {
     margin-left: calc(50% - 16.35em);
   }
 
-  /* line 629, ../sass/main.scss */
+  /* line 641, ../sass/main.scss */
   .headh2 {
     margin-left: calc(50% - 22.35em);
   }
 
-  /* line 633, ../sass/main.scss */
+  /* line 645, ../sass/main.scss */
   .floatInfo {
     margin-top: 27px;
   }
 
-  /* line 640, ../sass/main.scss */
+  /* line 652, ../sass/main.scss */
   .topRow {
     padding-top: 15px;
   }
 
-  /* line 644, ../sass/main.scss */
+  /* line 656, ../sass/main.scss */
   #contactForm {
     margin-bottom: 16px;
   }
 
-  /* line 648, ../sass/main.scss */
+  /* line 660, ../sass/main.scss */
   .contactTitle {
     border-bottom: none;
   }
 
-  /* line 652, ../sass/main.scss */
+  /* line 664, ../sass/main.scss */
   .listContainer {
     min-height: 265px;
   }
 
-  /* line 656, ../sass/main.scss */
+  /* line 668, ../sass/main.scss */
   .floatTitle {
     float: left;
     margin-left: 0px;
     margin-bottom: 26em;
   }
 
-  /* line 662, ../sass/main.scss */
+  /* line 674, ../sass/main.scss */
   .button1 {
     margin-left: calc(50% - 30.98em);
   }
 
-  /* line 666, ../sass/main.scss */
+  /* line 678, ../sass/main.scss */
   .listTitle {
     margin-bottom: 100px;
   }
 
-  /* line 670, ../sass/main.scss */
+  /* line 682, ../sass/main.scss */
   .threeh2 {
     text-align: right;
     border-top: 1px solid #008cba;
   }
 
-  /* line 675, ../sass/main.scss */
+  /* line 687, ../sass/main.scss */
   .tileContainer {
     max-width: 1024px;
   }
