--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1183,7 +1183,7 @@ ul.off-canvas-list li a:hover {
   src: url(../fonts/Web_Serveroff.otf);
 }
 
-/* line 32, ../sass/main.scss */
+/* line 32, ../sass/index.scss */
 body {
   padding: 0;
   margin: 0;
@@ -1212,25 +1212,25 @@ body {
     margin-right: 1px;
   }
 }*/
-/* line 61, ../sass/main.scss */
+/* line 61, ../sass/index.scss */
 .myTitle {
   padding-left: .5em;
   padding-top: 4px;
   padding-right: 1em;
 }
 
-/* line 67, ../sass/main.scss */
+/* line 67, ../sass/index.scss */
 .logo {
   max-height: 2.9em;
 }
 
-/* line 71, ../sass/main.scss */
+/* line 71, ../sass/index.scss */
 .stripe {
   position: relative;
   padding: 3em .769em;
 }
 
-/* line 76, ../sass/main.scss */
+/* line 76, ../sass/index.scss */
 .one {
   background: url("../img/scientist.jpg");
   background-position: 85% 0px;
@@ -1239,33 +1239,33 @@ body {
   background-repeat: no-repeat;
 }
 
-/* line 84, ../sass/main.scss */
+/* line 84, ../sass/index.scss */
 .two {
   min-height: 450px;
   padding-bottom: 1em;
 }
 
-/* line 89, ../sass/main.scss */
+/* line 89, ../sass/index.scss */
 .three {
   text-align: center;
   padding-top: 1.5em;
   padding-bottom: 1.5em;
 }
 
-/* line 98, ../sass/main.scss */
+/* line 98, ../sass/index.scss */
 .headtext {
   text-align: right;
   margin-right: 32.24px;
   margin-top: -2em;
 }
 
-/* line 104, ../sass/main.scss */
+/* line 104, ../sass/index.scss */
 .test {
   display: block;
   text-align: right;
 }
 
-/* line 110, ../sass/main.scss */
+/* line 110, ../sass/index.scss */
 .headh1 {
   font-size: 1.9em;
   font-family: "OpenSans";
@@ -1279,7 +1279,7 @@ body {
   font-weight: 200;
 }
 
-/* line 122, ../sass/main.scss */
+/* line 122, ../sass/index.scss */
 .headh2 {
   font-size: 1.2em;
   font-family: "OpenSans";
@@ -1293,14 +1293,14 @@ body {
   font-weight: 200;
 }
 
-/* line 135, ../sass/main.scss */
+/* line 135, ../sass/index.scss */
 .mainh2 {
   font-size: 1.4em;
   display: block;
   orphans: 3;
 }
 
-/* line 144, ../sass/main.scss */
+/* line 144, ../sass/index.scss */
 .circleImg {
   display: none;
   position: absolute;
@@ -1311,12 +1311,12 @@ body {
   background-color: #000;
 }
 
-/* line 154, ../sass/main.scss */
+/* line 154, ../sass/index.scss */
 .list {
   margin-left: 0;
 }
 
-/* line 158, ../sass/main.scss */
+/* line 158, ../sass/index.scss */
 .list li {
   display: list-item;
   padding: 0;
@@ -1328,7 +1328,7 @@ body {
   padding-left: 2.5em;
 }
 
-/* line 170, ../sass/main.scss */
+/* line 170, ../sass/index.scss */
 .list li:before {
   content: "\003E \020";
   font-family: "consolas";
@@ -1341,7 +1341,7 @@ body {
   margin-bottom: .5em;
 }
 
-/* line 182, ../sass/main.scss */
+/* line 182, ../sass/index.scss */
 .list {
   border-top: #008cba solid 1px;
   display: inline-block;
@@ -1357,20 +1357,20 @@ body {
   overflow: visible;
 }
 
-/* line 197, ../sass/main.scss */
+/* line 197, ../sass/index.scss */
 .listHidden {
   display: none;
   margin-right: 0;
 }
 
-/* line 202, ../sass/main.scss */
+/* line 202, ../sass/index.scss */
 .tileContainer {
   display: block;
   margin: 0 auto;
   text-align: center;
 }
 
-/* line 208, ../sass/main.scss */
+/* line 208, ../sass/index.scss */
 .floatTitle {
   display: block;
   width: 13.8em;
@@ -1380,7 +1380,7 @@ body {
   margin-right: .769em;
 }
 
-/* line 220, ../sass/main.scss */
+/* line 220, ../sass/index.scss */
 .threeh2 {
   font-family: "OpenSans";
   font-weight: 200;
@@ -1394,7 +1394,7 @@ body {
   margin-bottom: 0em;
 }
 
-/* line 234, ../sass/main.scss */
+/* line 234, ../sass/index.scss */
 .tile {
   display: inline-block;
   position: relative;
@@ -1407,7 +1407,7 @@ body {
   overflow: auto;
 }
 
-/* line 246, ../sass/main.scss */
+/* line 246, ../sass/index.scss */
 .listContainer {
   padding: 0;
   max-width: 759.48px;
@@ -1418,17 +1418,17 @@ body {
   min-height: 265px;
 }
 
-/* line 256, ../sass/main.scss */
+/* line 256, ../sass/index.scss */
 .tileInvis1 {
   display: none;
 }
 
-/* line 260, ../sass/main.scss */
+/* line 260, ../sass/index.scss */
 .tileInvis {
   display: none;
 }
 
-/* line 265, ../sass/main.scss */
+/* line 265, ../sass/index.scss */
 h3 {
   display: block;
   min-height: 3.5em;
@@ -1439,7 +1439,7 @@ h3 {
   text-align: left;
 }
 
-/* line 277, ../sass/main.scss */
+/* line 277, ../sass/index.scss */
 p {
   text-align: left;
   font-family: "OpenSans";
@@ -1450,12 +1450,12 @@ p {
   margin: .5em 0;
 }
 
-/* line 287, ../sass/main.scss */
+/* line 287, ../sass/index.scss */
 .tileText {
   text-align: left;
 }
 
-/* line 291, ../sass/main.scss */
+/* line 291, ../sass/index.scss */
 .floatInfo {
   display: none;
   float: right;
@@ -1467,36 +1467,36 @@ p {
   text-align: left;
 }
 
-/* line 302, ../sass/main.scss */
+/* line 302, ../sass/index.scss */
 .infoText {
   font-family: "OpenSans";
   font-size: 1.05em;
   line-height: 1.4em;
 }
 
-/* line 308, ../sass/main.scss */
+/* line 308, ../sass/index.scss */
 .mailLink {
   color: #008cba;
   text-decoration: underline;
 }
 
-/* line 313, ../sass/main.scss */
+/* line 313, ../sass/index.scss */
 .contactTitle {
   border-bottom: 1px solid #a8a8a8;
   padding-bottom: 31px;
 }
 
-/* line 318, ../sass/main.scss */
+/* line 318, ../sass/index.scss */
 .contactInfoTitle {
   color: #008cba;
 }
 
-/* line 322, ../sass/main.scss */
+/* line 322, ../sass/index.scss */
 #contactForm {
   margin-bottom: 16px;
 }
 
-/* line 326, ../sass/main.scss */
+/* line 326, ../sass/index.scss */
 .contactQuarter {
   display: inline-block;
   margin: 0;
@@ -1504,7 +1504,7 @@ p {
   margin-top: 12.32px;
 }
 
-/* line 333, ../sass/main.scss */
+/* line 333, ../sass/index.scss */
 .contactHalf {
   display: inline-block;
   margin: 0;
@@ -1512,14 +1512,14 @@ p {
   margin-top: 12.32px;
 }
 
-/* line 340, ../sass/main.scss */
+/* line 340, ../sass/index.scss */
 input {
   font-family: "OpenSans";
   border: #a8a8a8 1px solid;
   padding-left: .5em;
 }
 
-/* line 346, ../sass/main.scss */
+/* line 346, ../sass/index.scss */
 h4 {
   display: block;
   font-size: 1.05em;
@@ -1532,7 +1532,7 @@ h4 {
   text-align: left;
 }
 
-/* line 358, ../sass/main.scss */
+/* line 358, ../sass/index.scss */
 textarea {
   margin: 0;
   font-family: "OpenSans";
@@ -1540,35 +1540,35 @@ textarea {
   padding-left: .5em;
 }
 
-/* line 365, ../sass/main.scss */
+/* line 365, ../sass/index.scss */
 input:focus {
   border: 1px solid #008cba;
 }
 
-/* line 369, ../sass/main.scss */
+/* line 369, ../sass/index.scss */
 textarea:focus {
   border: 1px solid #008cba;
 }
 
-/* line 373, ../sass/main.scss */
+/* line 373, ../sass/index.scss */
 .contactAreaQuarter {
   box-sizing: border-box;
   width: 219px;
   height: 32.24px;
 }
 
-/* line 380, ../sass/main.scss */
+/* line 380, ../sass/index.scss */
 #message {
   width: 221px;
   min-height: 3.5em;
 }
 
-/* line 386, ../sass/main.scss */
+/* line 386, ../sass/index.scss */
 .displayToggle {
   display: none;
 }
 
-/* line 390, ../sass/main.scss */
+/* line 390, ../sass/index.scss */
 .button1 {
   float: left;
   color: #464646;
@@ -1583,30 +1583,30 @@ textarea:focus {
   text-decoration: none;
 }
 
-/* line 404, ../sass/main.scss */
+/* line 404, ../sass/index.scss */
 .button1:hover {
   border: 1px solid #008cba;
   color: #008cba;
   cursor: pointer;
 }
 
-/* line 410, ../sass/main.scss */
+/* line 410, ../sass/index.scss */
 .firstTile {
   border-color: #008cba;
 }
 
-/* line 414, ../sass/main.scss */
+/* line 414, ../sass/index.scss */
 .firstList {
   border-color: #008cba;
 }
 
-/* line 418, ../sass/main.scss */
+/* line 418, ../sass/index.scss */
 img.form-success {
   max-height: 1.5rem;
   float: left;
 }
 
-/* line 422, ../sass/main.scss */
+/* line 422, ../sass/index.scss */
 div.form-success {
   text-align: left;
   line-height: 1rem;
@@ -1616,24 +1616,24 @@ div.form-success {
 /*--------------------------------
 --------------------------------*/
 @media (min-width: 0px) and (max-width: 534px) {
-  /* line 431, ../sass/main.scss */
+  /* line 431, ../sass/index.scss */
   .test {
     margin-top: -5em;
   }
 
-  /* line 435, ../sass/main.scss */
+  /* line 435, ../sass/index.scss */
   .headtext {
     display: none;
   }
 }
 @media (min-width: 535px) {
-  /* line 444, ../sass/main.scss */
+  /* line 444, ../sass/index.scss */
   .one {
     min-height: 300px;
     background-position: 60% 0;
   }
 
-  /* line 449, ../sass/main.scss */
+  /* line 449, ../sass/index.scss */
   .headh1 {
     text-align: left;
     min-width: 300px;
@@ -1644,7 +1644,7 @@ div.form-success {
     padding-left: 0;
   }
 
-  /* line 458, ../sass/main.scss */
+  /* line 458, ../sass/index.scss */
   .headh2 {
     text-align: left;
     min-width: 300px;
@@ -1656,17 +1656,17 @@ div.form-success {
   }
 }
 @media (min-width: 535px) {
-  /* line 470, ../sass/main.scss */
+  /* line 470, ../sass/index.scss */
   .secondTile {
     border-color: #008cba;
   }
 
-  /* line 474, ../sass/main.scss */
+  /* line 474, ../sass/index.scss */
   .one {
     min-height: 300px;
   }
 
-  /* line 478, ../sass/main.scss */
+  /* line 478, ../sass/index.scss */
   .headh1 {
     text-align: left;
     min-width: 300px;
@@ -1677,7 +1677,7 @@ div.form-success {
     padding-left: 0;
   }
 
-  /* line 487, ../sass/main.scss */
+  /* line 487, ../sass/index.scss */
   .headh2 {
     text-align: left;
     min-width: 300px;
@@ -1688,207 +1688,207 @@ div.form-success {
     padding-left: 0;
   }
 
-  /* line 496, ../sass/main.scss */
+  /* line 496, ../sass/index.scss */
   .two {
     min-height: 0px;
   }
 
-  /* line 500, ../sass/main.scss */
+  /* line 500, ../sass/index.scss */
   .list .liToggle {
     display: none;
   }
 
-  /* line 508, ../sass/main.scss */
+  /* line 508, ../sass/index.scss */
   .listHidden {
     display: inline-block;
   }
 
-  /* line 512, ../sass/main.scss */
+  /* line 512, ../sass/index.scss */
   .listContainer {
     min-width: 480px;
   }
 
-  /* line 516, ../sass/main.scss */
+  /* line 516, ../sass/index.scss */
   .floatTitle {
     margin-left: calc(50% - 15.85em);
   }
 
-  /* line 520, ../sass/main.scss */
+  /* line 520, ../sass/index.scss */
   .button1 {
     margin-left: calc(50% - 15.85em);
   }
 
-  /* line 524, ../sass/main.scss */
+  /* line 524, ../sass/index.scss */
   .tileInvis1 {
     display: inline-block;
   }
 
-  /* line 528, ../sass/main.scss */
+  /* line 528, ../sass/index.scss */
   #message {
     width: 474.24;
     min-height: 5.15em;
   }
 }
 @media (min-width: 784px) {
-  /* line 535, ../sass/main.scss */
+  /* line 535, ../sass/index.scss */
   .thirdTile {
     border-color: #008cba;
   }
 
-  /* line 542, ../sass/main.scss */
+  /* line 542, ../sass/index.scss */
   .firstList {
     border-color: #a8a8a8;
   }
 
-  /* line 546, ../sass/main.scss */
+  /* line 546, ../sass/index.scss */
   .one {
     min-height: 450px;
     background-size: cover;
     background-repeat: no-repeat;
   }
 
-  /* line 552, ../sass/main.scss */
+  /* line 552, ../sass/index.scss */
   .headh1, .headh2 {
     margin-left: calc(50% - 11.9em);
     max-width: 850px;
   }
 
-  /* line 558, ../sass/main.scss */
+  /* line 558, ../sass/index.scss */
   .headh2 {
     margin-left: calc(50% - 15.42em);
   }
 
-  /* line 565, ../sass/main.scss */
+  /* line 565, ../sass/index.scss */
   .threeh2list {
     text-align: left;
     border-top: 1px solid #008cba;
   }
 
-  /* line 570, ../sass/main.scss */
+  /* line 570, ../sass/index.scss */
   .listTitle {
     float: left;
     margin-left: 0px;
     margin-bottom: 100px;
   }
 
-  /* line 578, ../sass/main.scss */
+  /* line 578, ../sass/index.scss */
   .listContainer {
     min-width: 727.32px;
     min-height: 265px;
     padding: 0;
   }
 
-  /* line 584, ../sass/main.scss */
+  /* line 584, ../sass/index.scss */
   ul .displayToggle {
     display: list-item;
   }
 
-  /* line 597, ../sass/main.scss */
+  /* line 597, ../sass/index.scss */
   .tile {
     margin-right: 2.01em;
     display: inline-block;
   }
 
-  /* line 602, ../sass/main.scss */
+  /* line 602, ../sass/index.scss */
   .tileInvis {
     display: inline-block;
   }
 
-  /* line 606, ../sass/main.scss */
+  /* line 606, ../sass/index.scss */
   .floatTitle {
     margin-left: calc(50% - 23.74em);
   }
 
-  /* line 610, ../sass/main.scss */
+  /* line 610, ../sass/index.scss */
   .button1 {
     margin-left: calc(50% - 23.74em);
   }
 
-  /* line 614, ../sass/main.scss */
+  /* line 614, ../sass/index.scss */
   .floatInfo {
     display: inline-block;
   }
 
-  /* line 618, ../sass/main.scss */
+  /* line 618, ../sass/index.scss */
   .info {
     display: none;
   }
 
-  /* line 622, ../sass/main.scss */
+  /* line 622, ../sass/index.scss */
   .tileContainer {
     max-width: 763px;
   }
 
-  /* line 626, ../sass/main.scss */
+  /* line 626, ../sass/index.scss */
   .listTileContainer {
     max-width: 250px;
   }
 }
 @media (min-width: 1054px) {
-  /* line 633, ../sass/main.scss */
+  /* line 633, ../sass/index.scss */
   .one {
     background-position: 50% 0;
   }
 
-  /* line 637, ../sass/main.scss */
+  /* line 637, ../sass/index.scss */
   .headh1, .headh2 {
     margin-left: calc(50% - 16.35em);
   }
 
-  /* line 642, ../sass/main.scss */
+  /* line 642, ../sass/index.scss */
   .headh2 {
     margin-left: calc(50% - 22.35em);
   }
 
-  /* line 646, ../sass/main.scss */
+  /* line 646, ../sass/index.scss */
   .floatInfo {
     margin-top: 27px;
   }
 
-  /* line 653, ../sass/main.scss */
+  /* line 653, ../sass/index.scss */
   .topRow {
     padding-top: 15px;
   }
 
-  /* line 657, ../sass/main.scss */
+  /* line 657, ../sass/index.scss */
   #contactForm {
     margin-bottom: 16px;
   }
 
-  /* line 661, ../sass/main.scss */
+  /* line 661, ../sass/index.scss */
   .contactTitle {
     border-bottom: none;
   }
 
-  /* line 665, ../sass/main.scss */
+  /* line 665, ../sass/index.scss */
   .listContainer {
     min-height: 265px;
   }
 
-  /* line 669, ../sass/main.scss */
+  /* line 669, ../sass/index.scss */
   .floatTitle {
     float: left;
     margin-left: 0px;
     margin-bottom: 26em;
   }
 
-  /* line 675, ../sass/main.scss */
+  /* line 675, ../sass/index.scss */
   .button1 {
     margin-left: calc(50% - 30.98em);
   }
 
-  /* line 679, ../sass/main.scss */
+  /* line 679, ../sass/index.scss */
   .listTitle {
     margin-bottom: 100px;
   }
 
-  /* line 683, ../sass/main.scss */
+  /* line 683, ../sass/index.scss */
   .threeh2 {
     text-align: right;
     border-top: 1px solid #008cba;
   }
 
-  /* line 688, ../sass/main.scss */
+  /* line 688, ../sass/index.scss */
   .tileContainer {
     max-width: 1024px;
   }
