--- a/sass/index.scss
+++ b/sass/index.scss
@@ -7,7 +7,7 @@
 $medium-gutter: 32.24px;
 $small-gutter: 12.32px;
 $quarter-box: 221px;
-$half-box: 474.24;
+$half-box: 474.24; 
 $mygree: rgb(116,201,114);
 $mygreen: #008cba;
 $myblue: #66B9E3;
@@ -35,14 +35,14 @@ body {
   @include box-orient(horizontal);
   @include box-align(stretch);
   @include box-direction(reverse);
-  height: 200px;
+  height: 200px; 
   width: 100%;
   .content, .sidebar {
     padding: 20px;
   }
   .content {
     @include box-flex(4);
-    background-color: #c5c1b4;
+    background-color: #c5c1b4; 
   }
   .sidebar {
     @include box-flex(1);
@@ -50,6 +50,10 @@ body {
     margin-right: 1px;
   }
 }*/
+
+.nothing {
+	color:red;
+}
 
 .myTitle {
 	padding-left:.5em;
