css image name correction

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -60,7 +60,7 @@ body {
 
 /* line 76, ../sass/main.scss */
 .one {
-  background: url("../img/scientist.jpg");
+  background: url("../img/Scientist.jpg");
   background-position: 85% 0px;
   min-height: 150px;
   background-size: cover;
