redo of last commit

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -487,7 +487,7 @@ body {
 
 /* line 78, ../sass/index.scss */
 .one {
-  background: url("../img/scientist.jpg");
+  background: url("../img/Scientist.jpg");
   background-position: 85% 0px;
   min-height: 150px;
   background-size: cover;
